<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_set"
        android:title=""
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:src="@mipmap/tab_my_normal"
        />


    <item
        android:id="@+id/action_Jinhua"
        android:orderInCategory="100"
        android:title="@string/action_Jinhua"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Hangzhou"
        android:orderInCategory="200"
        android:title="@string/action_Hangzhou"
        app:showAsAction="" />
    <item
        android:id="@+id/action_Ningbo"
        android:orderInCategory="300"
        android:title="@string/action_Ningbo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Wenzhou"
        android:orderInCategory="400"
        android:title="@string/action_Wenzhou"
        app:showAsAction="" />

    <item
        android:id="@+id/action_Shaoxing"
        android:orderInCategory="500"
        android:title="@string/action_Shaoxing"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Huzhou"
        android:orderInCategory="600"
        android:title="@string/action_Huzhou"
        app:showAsAction="" />
    <item
        android:id="@+id/action_Jiaxing"
        android:orderInCategory="700"
        android:title="@string/action_Jiaxing"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Quzhou"
        android:orderInCategory="800"
        android:title="@string/action_Quzhou"
        app:showAsAction="" />

    <item
        android:id="@+id/action_Taizhou"
        android:orderInCategory="900"
        android:title="@string/action_Taizhou"
        app:showAsAction="" />
    <item
        android:id="@+id/action_Lishui"
        android:orderInCategory="1000"
        android:title="@string/action_Lishui"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Zhoushan"
        android:orderInCategory="1100"
        android:title="@string/action_Zhoushan"
        app:showAsAction="" />
</menu>
