<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomePageActivity" >

        <RadioGroup
            android:id="@+id/rg_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_channel"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_channel"
                android:button="@null"
                android:text="@string/tab_menu_alert" />

            <RadioButton
                android:id="@+id/rb_message"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_message"
                android:button="@null"
                android:text="@string/tab_menu_profile" />

            <RadioButton
                android:id="@+id/rb_better"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_menu_better"
                android:text="@string/tab_menu_pay" />
        </RadioGroup>

        <android.support.v4.view.ViewPager
            android:layout_marginTop="8dp"
            android:id="@+id/vpager"
            android:layout_above="@id/rg_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>




